Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-12411

Hang on lnetctl route del

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Major Major
    • Lustre 2.13.0, Lustre 2.12.4
    • Lustre 2.13.0, Lustre 2.12.3
    • None
    • 3
    • 9223372036854775807

      Hit with master.

      Steps to reproduce:

      sles15build01:/home/hornc/lustre-filesystem # insmod ./libcfs/libcfs/libcfs.ko
      sles15build01:/home/hornc/lustre-filesystem # insmod ./lnet/lnet/lnet.ko
      sles15build01:/home/hornc/lustre-filesystem # cd lnet/utils/
      sles15build01:/home/hornc/lustre-filesystem/lnet/utils # ./lnetctl lnet configure
      sles15build01:/home/hornc/lustre-filesystem/lnet/utils # ./lnetctl export
      net:
          - net type: lo
            local NI(s):
              - nid: 0@lo
                status: up
                statistics:
                    send_count: 0
                    recv_count: 0
                    drop_count: 0
                sent_stats:
                    put: 0
                    get: 0
                    reply: 0
                    ack: 0
                    hello: 0
                received_stats:
                    put: 0
                    get: 0
                    reply: 0
                    ack: 0
                    hello: 0
                dropped_stats:
                    put: 0
                    get: 0
                    reply: 0
                    ack: 0
                    hello: 0
                health stats:
                    health value: 0
                    interrupts: 0
                    dropped: 0
                    aborted: 0
                    no route: 0
                    timeouts: 0
                    error: 0
                tunables:
                    peer_timeout: 0
                    peer_credits: 0
                    peer_buffer_credits: 0
                    credits: 0
                dev cpt: 0
                tcp bonding: 0
                CPT: "[0,1,2,3]"
      global:
          numa_range: 0
          max_intf: 200
          discovery: 1
          drop_asym_route: 0
      sles15build01:/home/hornc/lustre-filesystem/lnet/utils # ./lnetctl route add --net gni4 --gateway 10.12.0.[1-4]@o2ib40
      sles15build01:/home/hornc/lustre-filesystem/lnet/utils # ./lnetctl export
      net:
          - net type: lo
            local NI(s):
              - nid: 0@lo
                status: up
                statistics:
                    send_count: 0
                    recv_count: 0
                    drop_count: 0
                sent_stats:
                    put: 0
                    get: 0
                    reply: 0
                    ack: 0
                    hello: 0
                received_stats:
                    put: 0
                    get: 0
                    reply: 0
                    ack: 0
                    hello: 0
                dropped_stats:
                    put: 0
                    get: 0
                    reply: 0
                    ack: 0
                    hello: 0
                health stats:
                    health value: 0
                    interrupts: 0
                    dropped: 0
                    aborted: 0
                    no route: 0
                    timeouts: 0
                    error: 0
                tunables:
                    peer_timeout: 0
                    peer_credits: 0
                    peer_buffer_credits: 0
                    credits: 0
                dev cpt: 0
                tcp bonding: 0
                CPT: "[0,1,2,3]"
      route:
          - net: gni4
            gateway: 10.12.0.4@o2ib40
            hop: -1
            priority: 0
            health_sensitivity: 1
            state: down
          - net: gni4
            gateway: 10.12.0.3@o2ib40
            hop: -1
            priority: 0
            health_sensitivity: 1
            state: down
          - net: gni4
            gateway: 10.12.0.2@o2ib40
            hop: -1
            priority: 0
            health_sensitivity: 1
            state: down
          - net: gni4
            gateway: 10.12.0.1@o2ib40
            hop: -1
            priority: 0
            health_sensitivity: 1
            state: down
      peer:
          - primary nid: 10.12.0.1@o2ib40
            Multi-Rail: True
            peer ni:
              - nid: 10.12.0.1@o2ib40
                state: up
                max_ni_tx_credits: 0
                available_tx_credits: 0
                min_tx_credits: 0
                tx_q_num_of_buf: 0
                available_rtr_credits: 0
                min_rtr_credits: 0
                refcount: 2
                statistics:
                    send_count: 0
                    recv_count: 0
                    drop_count: 0
                sent_stats:
                    put: 0
                    get: 0
                    reply: 0
                    ack: 0
                    hello: 0
                received_stats:
                    put: 0
                    get: 0
                    reply: 0
                    ack: 0
                    hello: 0
                dropped_stats:
                    put: 0
                    get: 0
                    reply: 0
                    ack: 0
                    hello: 0
                health stats:
                    health value: 1000
                    dropped: 0
                    timeout: 0
                    error: 0
                    network timeout: 0
          - primary nid: 10.12.0.2@o2ib40
            Multi-Rail: True
            peer ni:
              - nid: 10.12.0.2@o2ib40
                state: up
                max_ni_tx_credits: 0
                available_tx_credits: 0
                min_tx_credits: 0
                tx_q_num_of_buf: 0
                available_rtr_credits: 0
                min_rtr_credits: 0
                refcount: 2
                statistics:
                    send_count: 0
                    recv_count: 0
                    drop_count: 0
                sent_stats:
                    put: 0
                    get: 0
                    reply: 0
                    ack: 0
                    hello: 0
                received_stats:
                    put: 0
                    get: 0
                    reply: 0
                    ack: 0
                    hello: 0
                dropped_stats:
                    put: 0
                    get: 0
                    reply: 0
                    ack: 0
                    hello: 0
                health stats:
                    health value: 1000
                    dropped: 0
                    timeout: 0
                    error: 0
                    network timeout: 0
          - primary nid: 10.12.0.4@o2ib40
            Multi-Rail: True
            peer ni:
              - nid: 10.12.0.4@o2ib40
                state: up
                max_ni_tx_credits: 0
                available_tx_credits: 0
                min_tx_credits: 0
                tx_q_num_of_buf: 0
                available_rtr_credits: 0
                min_rtr_credits: 0
                refcount: 2
                statistics:
                    send_count: 0
                    recv_count: 0
                    drop_count: 0
                sent_stats:
                    put: 0
                    get: 0
                    reply: 0
                    ack: 0
                    hello: 0
                received_stats:
                    put: 0
                    get: 0
                    reply: 0
                    ack: 0
                    hello: 0
                dropped_stats:
                    put: 0
                    get: 0
                    reply: 0
                    ack: 0
                    hello: 0
                health stats:
                    health value: 1000
                    dropped: 0
                    timeout: 0
                    error: 0
                    network timeout: 0
          - primary nid: 10.12.0.3@o2ib40
            Multi-Rail: True
            peer ni:
              - nid: 10.12.0.3@o2ib40
                state: up
                max_ni_tx_credits: 0
                available_tx_credits: 0
                min_tx_credits: 0
                tx_q_num_of_buf: 0
                available_rtr_credits: 0
                min_rtr_credits: 0
                refcount: 2
                statistics:
                    send_count: 0
                    recv_count: 0
                    drop_count: 0
                sent_stats:
                    put: 0
                    get: 0
                    reply: 0
                    ack: 0
                    hello: 0
                received_stats:
                    put: 0
                    get: 0
                    reply: 0
                    ack: 0
                    hello: 0
                dropped_stats:
                    put: 0
                    get: 0
                    reply: 0
                    ack: 0
                    hello: 0
                health stats:
                    health value: 1000
                    dropped: 0
                    timeout: 0
                    error: 0
                    network timeout: 0
      global:
          numa_range: 0
          max_intf: 200
          discovery: 1
          drop_asym_route: 0
      sles15build01:/home/hornc/lustre-filesystem/lnet/utils # ./lnetctl route del --gateway 10.12.0.[1-4]@o2ib4 --net gni4
      ^^^^ Command hangs
      

        1. dmesg.txt
          253 kB
        2. LU-12411.dump.tar.bz2
          103.24 MB

            ashehata Amir Shehata (Inactive)
            hornc Chris Horn
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: